--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-feed": "^4.18.0",
     "gatsby-plugin-google-analytics": "^4.18.0",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^2.25.0",
     "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-manifest": "^4.18.0",
