--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fontsource/oswald": "^4.5.12",
     "@fontsource/raleway": "^4.5.12",
     "@loadable/component": "^5.15.2",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "dotenv": "^16.0.1",
     "emailjs": "^4.0.0",
     "emailjs-com": "^3.2.0",
@@ -21,6 +23,7 @@
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-feed": "^4.18.0",
     "gatsby-plugin-google-analytics": "^4.18.0",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^2.25.0",
     "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-manifest": "^4.18.0",
