--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql-language-service-server": "^2.8.9",
     "netlify-cms-app": "^2.15.72",
     "node-sass": "^8.0.0",
+    "nodemailer": "^7.0.10",
     "postscribe": "^2.0.8",
     "prismjs": "^1.28.0",
     "react": "^16.14.0",
